[package]
name = "bevy_click_collision_svn"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15.0"
bevy_rapier3d = "0.28.0"


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
